# main

./: .gitignore  CMakeLists.txt  README.adoc
.github/: definitions.yml  dependency-tree.yml
.github/workflows/: build-chain.yml
src/: CMakeLists.txt  main.cpp
